--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       { "src": "/api/(.*)", "dest": "backend/server.js" },
       { "src": "/(.*)", "dest": "frontend/build/$1" }
     ],
-    "buildCommand": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "buildCommand": "cd backend && npm install --legacy-peer-deps && cd ../frontend && npm install --legacy-peer-deps && npm run build",
     "outputDirectory": "frontend/build"
   }
   
